--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home">
 
     <fragment
         android:id="@+id/nav_home"
@@ -27,7 +27,8 @@
         android:id="@+id/nav_account"
         android:name="org.pondar.jetpackexamplekotlin.ui.account.AccountFragment"
         android:label="@string/account"
-        tools:layout="@layout/fragment_account" >
+        tools:layout="@layout/fragment_account"
+        app:startDestination="@id/action_nav_account_to_loggedInFragment">
         <action
             android:id="@+id/action_nav_account_to_loggedInFragment"
             app:destination="@id/nav_loggedInFragment" />
