--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -19,5 +20,10 @@
         <item
             android:id="@+id/nav_account"
             android:title="@string/account" />
+        <item
+            android:id="@+id/nav_about"
+            android:title="@string/menu_about" />
+
+
     </group>
 </menu>
