--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="org.pondar.jetpackexamplekotlin.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_about"
+            app:destination="@id/nav_about" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -42,4 +46,9 @@
             android:name="user"
             app:argType="org.pondar.jetpackexamplekotlin.models.User" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_about"
+        android:name="org.pondar.jetpackexamplekotlin.ui.about.AboutFragment"
+        android:label="@string/menu_about"
+        tools:layout="@layout/about_fragment" />
 </navigation>
